force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/CCR_DeviceDiagnosticLocalization__c.object-meta.xml
<CustomObject>
    <description>Used By: CCR
Description: Object used to store localized translations of the QURE process</description>
    <label>Device Diagnostic Localization</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Device Diagnostic Localization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Diagnostics Localizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>