force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_Active__c.field-meta.xml
<CustomField>
    <fullName>CCR_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used By: CCR 
Description: Status of the issue</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>