force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_Country__c.field-meta.xml
<CustomField>
    <fullName>CCR_Country__c</fullName>
    <description>Used By CCR: Description: Country of the diagnostic image or text</description>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DTE_CountryISOs</valueSetName>
    </valueSet>
</CustomField>