force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_DeviceDiagnostic__c.field-meta.xml
<CustomField>
    <fullName>CCR_DeviceDiagnostic__c</fullName>
    <description>Used By: CCR 
Description: To relate the Localization of the diagnostic with the diagnostic flow</description>
    <label>Device Diagnostic</label>
    <referenceTo>CCR_DeviceDiagnostic__c</referenceTo>
    <relationshipLabel>Devices Diagnostics Localizations</relationshipLabel>
    <relationshipName>Devices_Diagnostics_Localizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>