force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_Language__c.field-meta.xml
<CustomField>
    <fullName>CCR_Language__c</fullName>
    <description>Used By: CCR
Description: Language of the diagnostic image or text</description>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_Languages</valueSetName>
    </valueSet>
</CustomField>