force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_LocalisationUID__c.field-meta.xml
<CustomField>
    <fullName>CCR_LocalisationUID__c</fullName>
    <description>Used By: CCR 
Description:The fields will be used to leverage for the deployment of device config data in other environments</description>
    <externalId>true</externalId>
    <label>Localisation UID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>