force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_Message__c.field-meta.xml
<CustomField>
    <fullName>CCR_Message__c</fullName>
    <description>Used By: CCR
Description: to hold the country and language specific message</description>
    <label>Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>