force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_NextNegativeStepButtonValue__c.field-meta.xml
<CustomField>
    <fullName>CCR_NextNegativeStepButtonValue__c</fullName>
    <description>Used by: CCR
Description: Text displayed on negative button</description>
    <label>Next Negative Step Button Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>