force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_NextPositiveStepButtonValue__c.field-meta.xml
<CustomField>
    <fullName>CCR_NextPositiveStepButtonValue__c</fullName>
    <description>Used By: CCR
Description: text displayed on next button</description>
    <label>Next Positive Step Button Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>