force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/fields/CCR_Status__c.field-meta.xml
<CustomField>
    <fullName>CCR_Status__c</fullName>
    <description>Used By: CCR
Description: Status of the record</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Ready for Deployment</fullName>
            </value>
            <value>
                <fullName>Deployed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>