force-app/main/default/objects/CCR_DeviceDiagnosticLocalization__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CCR_DeviceDiagnostic__c</columns>
    <columns>CCR_LocalisationUID__c</columns>
    <columns>CCR_Message__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>